Fixed clipping of canvas when exporting to PDF

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -4,7 +4,6 @@
     display: grid;
     grid-template-rows: 100px auto;
     grid-template-columns: 300px 1fr 1fr;
-    overflow: hidden;
     grid-template-areas:
         "toolbar toolbar toolbar"
         "styler sandbox editor"
